# OOP

./: .coverage  .gitignore  README.md  coverage_report.txt  main.py  pyproject.toml  report.html
src/: category.py  product.py
tests/: test_category.py  test_inheritance.py  test_magic_methods.py  test_product.py
